bdr.BDR.scala.error
Erreur de compilation :
BDR:26: error: Boolean does not take parameters
        {recule(3)}
        ^